feat: 静默过滤不支持的web_search/websearch工具

--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,18 @@
 # - clientId: IdC认证的客户端ID（IdC认证时必需）
 # - clientSecret: IdC认证的客户端密钥（IdC认证时必需）
 # - disabled: 是否禁用此配置（可选，默认false）
-
+# ============================================================================
+# Token获取方式
+# ============================================================================
+#
+# Social tokens:
+#   通常位于 ~/.aws/sso/cache/ 目录下的JSON文件中
+#   文件名类似：kiro-auth-token.json 或包含 "refreshToken" 字段的缓存文件
+#
+# IdC tokens:
+#   位于 ~/.aws/sso/cache/ 目录下的JSON文件中
+#   需要同时提供 clientId 和 clientSecret
+#
 # 方式1：直接配置JSON字符串
 # 示例1：单个 Social 认证
 KIRO_AUTH_TOKEN='[{"auth":"Social","refreshToken":"your_social_refresh_token_here"}]'
@@ -35,24 +46,31 @@ KIRO_AUTH_TOKEN='[{"auth":"Social","refreshToken":"your_social_refresh_token_her
 # 示例2：单个 IdC 认证
 # KIRO_AUTH_TOKEN='[{"auth":"IdC","refreshToken":"your_idc_refresh_token_here","clientId":"your_idc_client_id","clientSecret":"your_idc_client_secret"}]'
 
-# 示例3：多个认证混合（推荐生产环境，实现负载均衡和容错）
+# 示例3：多个认证混合
 # KIRO_AUTH_TOKEN='[
 #   {
 #     "auth": "Social",
-#     "refreshToken": "arn:aws:sso:us-east-1:999999999999:token/refresh/token1"
-#   },
-#   {
-#     "auth": "Social",
-#     "refreshToken": "arn:aws:sso:us-east-1:999999999999:token/refresh/token2"
+#     "refreshToken": "aorAAAAAGj....."
 #   },
 #   {
 #     "auth": "IdC",
-#     "refreshToken": "arn:aws:identitycenter::us-east-1:999999999999:account/instance/xxx",
-#     "clientId": "https://oidc.us-east-1.amazonaws.com/clients/xxx",
-#     "clientSecret": "xxx-secret-key-xxx"
+#     "refreshToken": "aorAAAAAGj....",
+#     "clientId": "uG-18bI....",
+#     "clientSecret": "eyJraWQiOiJrZXktM....."
 #   }
 # ]'
-
+# ============================================================================
+# Token获取方式
+# ============================================================================
+#
+# Social tokens:
+#   通常位于 ~/.aws/sso/cache/ 目录下的JSON文件中
+#   文件名类似：kiro-auth-token.json 或包含 "refreshToken" 字段的缓存文件
+#
+# IdC tokens:
+#   位于 ~/.aws/sso/cache/ 目录下的JSON文件中
+#   需要同时提供 clientId 和 clientSecret
+#
 # Token选择策略：
 # - 系统使用"顺序选择"策略（sequential）
 # - 按配置顺序依次使用token，当前token耗尽后自动切换到下一个
@@ -88,18 +106,7 @@ LOG_FORMAT=json
 # LOG_CONSOLE=true
 
 
-# ============================================================================
-# Token获取方式
-# ============================================================================
-#
-# Social tokens:
-#   通常位于 ~/.aws/sso/cache/ 目录下的JSON文件中
-#   文件名类似：kiro-auth-token.json 或包含 "refreshToken" 字段的缓存文件
-#
-# IdC tokens:
-#   位于 ~/.aws/sso/cache/ 目录下的JSON文件中
-#   需要同时提供 clientId 和 clientSecret
-#
+
 # ============================================================================
 # 最佳实践
 # ============================================================================
